fixed character escaping in docroot URL